Grinder 3.0-beta18
------------------

  Fix console column header resizing by working around Java bug
  4760433.

  Fix the TCPProxy SSL support that I inadvertently broke in beta 17.

  Allow the console Look and Feel to be changed.


Grinder 3.0-beta17
------------------

  Fix bug 872546 - using HTTPPlugin with no console hangs the worker
  processes. The change involves explicitly calling
  InetAddress.getLocalHost() up front, indicating that the underlying
  cause is a very strange JVM issue.

  Fix bug 876097 - ClonePyInstance not included in grinder.jar. Thanks
  to Karl Wyer for the report.

  Fix implicit grinder object deprecation message. Thanks to Christian
  Sell for the report.

  Minor updates and fixes to the HTTPPluginTCPProxyFilters from
  Bertrand Ave.

  Fix bug 868587 - The HTTP plugin now uses a new SSL session for each
  thread and for each run. This corresponds to the orthodox grinder
  model of one run corresponding to one user browser session.
  Previously SSL sessions were pooled across threads, leading to
  unrealistic results when using The Grinder to drive a cluster of
  servers through SSL session-aware load balancers. More SSL sessions
  will be created, so expect high CPU load on both client and server,
  and average times for first contact with an HTTPS server within a
  test run to be significantly higher. Thanks to Joshua Reedy for
  prompting me to do this, and for testing the change.

  Example of how to use The Grinder with HTTPUnit from Tony Lodge.

  Email script example from Tom Pittard.

  Implement HTTPPluginConnection.removeBasicAuthorization() and
  HTTPPluginConnection.removeDigestAuthorization(). The parameters
  to this method, and semantics of the corresponding add methods, have
  been changed to match HTTPClient. The clearAll methods have been
  removed from the API.

  Add addValue() methods to the script Statistics API.

  The HTTP plugin now records the length of responses and reports mean