@@ -8,7 +8,7 @@ sleepTime=-1
 userAgent=Mozilla/4.1 (compatible; MSIE 6.0; Windows NT 5.0)
 
 # Cookie name, Default is JSESSIONID (v2 only)
-cookieName=JSESSIONID_ECH
+cookieName=JSESSIONID
 
 # Pattern to identify page where to find cookie value, default is ^.*?home.jsp$ (v2 only)
 #searchedPagePattern=^.*?Accueil.jsp$
@@ -27,9 +27,9 @@ excludeResource=on
 scriptFileV1=.\\httpscript
 
 # relative directory and name of the script file without extension (v2 only)
-scriptFileV2=.\\RecordedScenario
+scriptFileV2=.\\RecordedScenario_clx
 
 # pattern to identify discarded pages (max. 10 patterns) (v2 only)
-discardPattern0=^.*/application;.*?redirectToSamePage=true$
-discardPattern1=^.*?Accueil.jsp$
-discardPattern2=^.*?/$
+#discardPattern0=^.*/application;.*?redirectToSamePage=true$
+#discardPattern1=^.*?Accueil.jsp$
+#discardPattern2=^.*?/$
